Fixed the volume source directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
                 depends_on:
                         - anime_database
                 volumes:
-                        - /media/pi/PEDRO CRUZ/Animes:/animes
+                        - /media/pi/PEDRO_CRUZ/Animes:/animes
                 ports:
                         - "5000:80"
 
@@ -44,7 +44,7 @@ services:
                         - anime_database
 
                 volumes:
-                        - /media/pi/PEDRO CRUZ/Animes:/static/Animes
+                        - /media/pi/PEDRO_CRUZ/Animes:/static/Animes
                 ports:
                         - "80:80"
 
@@ -53,4 +53,4 @@ services:
                 container_name: anime_daily_check
                 restart: always
                 volumes:
-                        - /media/pi/PEDRO CRUZ/Animes:/animes
+                        - /media/pi/PEDRO_CRUZ/Animes:/animes
