--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,3 +53,11 @@ services:
                 restart: always
                 volumes:
                         - /media/pi/DISK/Animes:/animes
+
+        season_anime_update:
+                image: pedro4064/anime_nas_season_anime_update
+                container_name: season_anime_update
+                depends_on:
+                        - anime_database
+                ports: 
+                        - "8080:80"
