--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,13 +48,13 @@ services:
                 ports:
                         - "80:80"
 
-        # anime_daily_check:
-        #         image: pedro4064/anime_nas_daily_check
-        #         container_name: anime_daily_check
-        #         restart: always
-        #         volumes:
-        #                 - /media/pi/DISK/Animes:/Animes
-        #                 - /home/pi/Documents/Docker/Anime-NAS:/scripts 
+        anime_daily_check:
+                image: pedro4064/anime_nas_daily_check
+                container_name: anime_daily_check
+                restart: always
+                volumes:
+                        - /media/pi/DISK/Animes:/Animes
+                        - /home/pi/Documents/Docker/Anime-NAS:/scripts 
 
         # season_anime_update:
         #         image: pedro4064/anime_nas_season_anime_update
