--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python: Flask",
-            "type": "python",
+            "type": "python3",
             "request": "launch",
             "module": "flask",
             "env": {
