Uncommented all the container decalrations. Ready to deploy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
                         - 3306:3306
 
                 
-        # populate_db:
-        #         image: pedro4064/anime_nas_populate_db
-        #         container_name: populate_db                
-        #         depends_on:
-        #                 - anime_database
+        populate_db:
+                image: pedro4064/anime_nas_populate_db
+                container_name: populate_db                
+                depends_on:
+                        - anime_database
         
 
         anime_download:
@@ -31,8 +31,8 @@ services:
                         - anime_database
                 volumes:
                         - /media/pi/DISK/Animes:/animes
-                ports:
-                        - "5000:80"
+                # ports:
+                #         - "5000:80"
 
 
         anime_web_app:
@@ -56,13 +56,13 @@ services:
                         - /media/pi/DISK/Animes:/Animes
                         - /home/pi/Documents/Docker/Anime-NAS:/scripts 
 
-        # season_anime_update:
-        #         image: pedro4064/anime_nas_season_anime_update
-        #         container_name: season_anime_update
-        #         depends_on:
-        #                 - anime_database
-        #         ports: 
-        #                 - "8080:80"
+        season_anime_update:
+                image: pedro4064/anime_nas_season_anime_update
+                container_name: season_anime_update
+                depends_on:
+                        - anime_database
+                ports: 
+                        - "8080:8080"
 
         add_previously_downloaded_anime:
                 image: pedro4064/add_previously_downloaded_anime
